2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Delete `AM_CONDITIONAL` for no-longer-used
	`USE_GROPDF` configuration parameter.

2026-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am: De-parameterize production and installation of PDF
	documents created by groff.  We now build all such files
	regardless of gropdf(1)'s service level (see its man page).
	Update population of `pdfmomoption`, `groffmanpagesoption`,
	`PROCESSEDDOCFILES_PDF`, `docpdfdocdir`, and
	`nodist_docpdfdoc_DATA` accordingly.
	($(PROCESSEDDOCFILES_PDF)): Target now exists unconditionally.
	(mostlyclean_doc): Unconditionally delete these built files.

	Completes "action item E" from <https://lists.gnu.org/archive/\
	html/groff/2026-02/msg00004.html>.

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Disclose identity of Ghostscript command
	discovered by Autoconf in configuration summary.  Completes
	"action item A" from <https://lists.gnu.org/archive/html/groff/\
	2026-02/msg00004.html>.

2026-01-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Fix assertion
	failures (potential and actual) by supplying descriptions even
	of internally generated token types.  While a user _should_
	never be exposed to these in a diagnostic message, the event is
	not impossible (and said descriptions could be helpful to groff
	developers in tracking down the "impossible" situation).

	Fixes <https://savannah.gnu.org/bugs/?67990>.  Thanks to Deri
	James for the report.

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grodvi/grodvi.1.man (FT):
	* src/devices/grolj4/grolj4.1.man (FT):
	* src/devices/gropdf/gropdf.1.man (FT):
	* src/devices/grops/grops.1.man (FT): Suppress screeching ("-w
	font") from formatter if a font used for illustrating the
	typeface repertoire is unavailable.  Using a text typeface to