@@ -249,4 +249,3 @@ GROFF_URW_FONTS_NOTICE
 GROFF_UCHARDET_NOTICE
 GROFF_GROHTML_PROGRAM_NOTICE
 GROFF_MAKEINFO_PROGRAM_NOTICE
-GROFF_GROPDF_PROGRAM_NOTICE
